Refactor - AdminService: added @Transactional to improve queries and updates