@@ -8,6 +8,7 @@ import org.openapitools.model.UserInfo;
 import org.springframework.data.domain.Pageable;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import br.com.juliocauan.authentication.domain.model.Role;
 import br.com.juliocauan.authentication.domain.model.User;
@@ -18,58 +19,52 @@ import br.com.juliocauan.authentication.util.UserMapper;
 import lombok.AllArgsConstructor;
 
 @Service
+@Transactional
 @AllArgsConstructor
-public final class AdminService {
+public class AdminService {
 
     private final UserRepository userRepository;
     private final RoleRepository roleRepository;
 
-    //TODO check
-    public List<UserInfo> getUserInfos(String usernameContains, String role, Pageable pageable) {
+    public List<UserInfo> findAllUsers(String usernameContains, String role, Pageable pageable) {
         return userRepository.findAllByFilters(usernameContains, role, pageable).stream()
                 .map(UserMapper::domainToUserInfo)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    //TODO check
     public void updateUserRoles(String username, Set<String> newRoles) {
         validateSelf(username);
+        User user = userRepository.findByUsername(username);
         Set<Role> roles = newRoles.stream()
                 .map(roleRepository::findByName)
                 .collect(Collectors.toSet());
-        userRepository.updateUserRoles(username, roles);
+        userRepository.updateUserRoles(user, roles);
     }
 
-    //TODO check
     private void validateSelf(String username) {
         if (getLoggedUsername().equals(username))
             throw new AdminException("You can not update/delete your own account here!");
     }
 
-    //TODO check
     private String getLoggedUsername() {
         return SecurityContextHolder.getContext().getAuthentication().getName();
     }
 
-    //TODO check
     public void deleteUser(String username) {
         validateSelf(username);
         userRepository.deleteByUsername(username);
     }
 
-    //TODO check
-    public List<String> getAllRoles(String nameContains) {
+    public List<String> findAllRoles(String nameContains) {
         return roleRepository.findAllByFilters(nameContains).stream()
                 .map(Role::getName)
                 .collect(Collectors.toList());
     }
 
-    //TODO check
     public void registerRole(String role) {
         roleRepository.register(role);
     }
 
-    //TODO check
     public void deleteRole(String roleName) {
         if (roleName.equals("ADMIN"))
             throw new AdminException("Role [ADMIN] can not be deleted!");
@@ -78,7 +73,7 @@ public final class AdminService {
         users.forEach(user -> {
             Set<Role> roles = user.getRoles();
             roles.remove(role);
-            userRepository.updateUserRoles(user.getUsername(), roles);
+            userRepository.updateUserRoles(user, roles);
         });
         roleRepository.delete(role);
     }
